[gd_scene load_steps=2 format=2]

[ext_resource path="res://addons/EventBus/EventEditor/EventEditor.gd" type="Script" id=1]

[node name="EventEditor" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer"]
margin_right = 680.0
margin_bottom = 600.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="HBoxContainer" type="HBoxContainer" parent="HBoxContainer/VBoxContainer"]
margin_right = 680.0
margin_bottom = 24.0

[node name="NewSignalLineEdit" type="LineEdit" parent="HBoxContainer/VBoxContainer/HBoxContainer"]
margin_right = 584.0
margin_bottom = 24.0
size_flags_horizontal = 3

[node name="CreateEventButton" type="Button" parent="HBoxContainer/VBoxContainer/HBoxContainer"]
margin_left = 588.0
margin_right = 680.0
margin_bottom = 24.0
text = "create event"

[node name="EventsContainer" type="VBoxContainer" parent="HBoxContainer/VBoxContainer"]
margin_top = 28.0
margin_right = 680.0
margin_bottom = 28.0

[node name="VBoxContainer2" type="VBoxContainer" parent="HBoxContainer"]
margin_left = 684.0
margin_right = 1024.0
margin_bottom = 600.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.5

[node name="HBoxContainer" type="HBoxContainer" parent="HBoxContainer/VBoxContainer2"]
margin_right = 340.0
margin_bottom = 24.0
size_flags_horizontal = 3

[node name="NewTagLineEdit" type="LineEdit" parent="HBoxContainer/VBoxContainer2/HBoxContainer"]
margin_right = 261.0
margin_bottom = 24.0
size_flags_horizontal = 3

[node name="CreateTagButton" type="Button" parent="HBoxContainer/VBoxContainer2/HBoxContainer"]
margin_left = 265.0
margin_right = 340.0
margin_bottom = 24.0
text = "create tag"

[connection signal="text_entered" from="HBoxContainer/VBoxContainer/HBoxContainer/NewSignalLineEdit" to="." method="_on_NewSignalLineEdit_text_entered"]
[connection signal="pressed" from="HBoxContainer/VBoxContainer/HBoxContainer/CreateEventButton" to="." method="_on_CreateEventButton_pressed"]
